2019-06-21  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-here-links-intro): new function.
	(find-emacs-keys-intro): added references to `M-h M-3', `M-h M-w',
	and `M-h M-1'.

	* eev-elinks.el (find-here-links-3): new function.
	(find-here-links-1): new function.
	(ee-window-configuration-before-M-h-M-3): new variable.
	(ee-find-here-links0): added a reference to `find-here-links-3'.

	* eev-mode.el (eev-mode-map-set): added bindings to `M-h M-1' and
	`M-h M-3' (`find-here-links-1' and `find-here-links-3').

2019-06-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-beginner.el (eev-beginner): bind `M-h M-h' to
	`find-here-links-beginner'.

	* eev-blinks.el (ee-find-eejumps-header): added examples.

2019-06-16  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-intro.el (find-emacs-keys-intro): list `M-h M-k', `M-h M-f',
	and `M-h M-p' among the basic keys of eev.
	(find-links-intro): Rewrote the section "The first line
	regenerates the buffer".

	* eev-eval.el (ee-eval-sexp-eol): changes in the docstring.

2019-06-12  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-tlinks.el (find-latex-links): added more links to the
	tutorial.

	* eev-elinks.el (find-code-pdf-links): made it generate a code-c-d
	besides the code-pdf pair; added another link to the tutorial.

2019-06-10  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-code-pdf-links): new function.
	(find-pdf-links): new function.
	(ee-pdflike-page-links): use `code-pdf-page' instead of
	`code-pdf'.

	* eev-mode.el (eev-mode-map-set): now `M-h M-p' is bound to
	`find-pdf-links'.

	* .dir-locals.el: new file.

2019-05-24  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-efunction-links): added an `eek' link.
	(find-evariable-links): added an ``eek' link.

2019-05-17  Eduardo Ochs  <eduardoochs@gmail.com>

	* eev-elinks.el (find-here-links-3): new function.
	(find-here-links-beginner): small changes.

	* eev-intro.el: small changes.
